woring copy of express server to render index.html; use angular js to control routing

--- a/app/index.html
+++ b/app/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
 
-<body ng-app="app">
+<script type='text/javascript' src='app.module.js'></script>
+<script type='text/javascript' src='route.js'> </script>
+
+<body ng-app='app'>
 
 <div ng-view></div>
 
