no bootstrap include

--- a/app/main.html
+++ b/app/main.html
@@ -6,4 +6,6 @@
   </h2>
   <a href="#!unSubscribeTestContent" button type="button" class="btn btn-primary">Enter the exam list</a>
 </div>
+<!-- Indicates a successful or positive action -->
+
 <div class="col-sm-2"></div>
