add navigation bar with bootstrap3

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,13 @@
 
 <script type='text/javascript' src='app.module.js'></script>
 <script type='text/javascript' src='route.js'> </script>
+<script type='text/javascript' src='navBar.directive.js'> </script>
+<script type='text/javascript' src='navBar.controller.js'> </script>
+
+<!-- bootstrap3 -->
+<script src="https://code.jquery.com/jquery.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 <body ng-app='app'>
 
