add button to log in with google and line account

--- a/app/logIn.html
+++ b/app/logIn.html
@@ -4,7 +4,6 @@
 
 <div class="col-sm-4">
 
-
 <h1>Log in page</h1>
 
 <!-- To add other login function here
@@ -12,6 +11,10 @@
   2. facebook
   3. line
 -->
+
+<button type="button" class="btn btn-default  btn-block">Log in with Google account</button>
+<button type="button" class="btn btn-default  btn-block">Log in with LINE account</button>
+
 <form ng-submit="logInSubmit()">
   <div class="form-group">
     <label for="email">Email address</label>
@@ -24,6 +27,13 @@
   <button type="submit" class="btn btn-primary btn-block">Log in</button>
 </form>
 
+<p>
+<h4>
+<a href=''>Forget password?</a>
+</h4>
+</p>
+<br>
+<a href='' class="btn btn-info btn-block" role="button">Sign up</a>
 </div>
 
 
