upgrade sign up function

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
 <script type='text/javascript' src='navBar.directive.js'> </script>
 <script type='text/javascript' src='navBar.controller.js'> </script>
 <script type='text/javascript' src='logIn.controller.js'> </script>
+<script type='text/javascript' src='signUp.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
