--- a/app/logIn.html
+++ b/app/logIn.html
@@ -11,10 +11,12 @@
   2. facebook
   3. line
 -->
-
+<div>
 <button type="button" class="btn btn-default  btn-block">Log in with Google account</button>
 <button type="button" class="btn btn-default  btn-block">Log in with LINE account</button>
-
+<button type="button" class="btn btn-default  btn-block">Log in with facebook account</button>
+</div>
+<br><br>
 <form ng-submit="logInSubmit()">
   <div class="form-group">
     <label for="email">Email address</label>
@@ -28,12 +30,12 @@
 </form>
 
 <p>
-<h4>
+<h5>
 <a href=''>Forget password?</a>
-</h4>
+</h5>
 </p>
 <br>
-<a href='' class="btn btn-info btn-block" role="button">Sign up</a>
+<a href='#!signUp' class="btn btn-info btn-block" role="button">Sign up</a>
 </div>
 
 
