--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 <script type='text/javascript' src='navBar.controller.js'> </script>
 <script type='text/javascript' src='logIn.controller.js'> </script>
 <script type='text/javascript' src='signUp.controller.js'> </script>
+<script type='text/javascript' src='unSubscribeTestMain.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
