add test summary and test score

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 <script type='text/javascript' src='signUp.controller.js'> </script>
 <script type='text/javascript' src='unSubscribeTestMain.controller.js'> </script>
 <script type='text/javascript' src='unSubscribeTutorialMode.controller.js'> </script>
+<script type='text/javascript' src='testSummaryUnSubscribeUser.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
