add test review unSubscribe user

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
 <script type='text/javascript' src='unSubscribeTestMain.controller.js'> </script>
 <script type='text/javascript' src='unSubscribeTutorialMode.controller.js'> </script>
 <script type='text/javascript' src='testSummaryUnSubscribeUser.controller.js'> </script>
+<script type='text/javascript' src='reviewUnSubscribeTest.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
