--- a/app/testSummaryUnSubscribeUser.html
+++ b/app/testSummaryUnSubscribeUser.html
@@ -1,4 +1,11 @@
 <nav-bar></nav-bar>
+
+<div class='row'>
+
+  <div class="col-sm-1"></div>
+
+  <div class="col-sm-10">
+
 <h1> Test Summary</h1>
 <h2>Score: {{score}}</h2>
 <br>
@@ -18,3 +25,7 @@
         </tr>
       </tbody>
 </table>
+
+</div>
+
+  <div class="col-sm-1"></div>
