--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
 <script type='text/javascript' src='unSubscribeTutorialMode.controller.js'> </script>
 <script type='text/javascript' src='testSummaryUnSubscribeUser.controller.js'> </script>
 <script type='text/javascript' src='reviewUnSubscribeTest.controller.js'> </script>
+<script type='text/javascript' src='testHeader.service.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
