--- a/app/logIn.html
+++ b/app/logIn.html
@@ -12,9 +12,15 @@
   3. line
 -->
 <div>
-<button type="button" class="btn btn-default  btn-block">Log in with Google account</button>
+
+  <a class="btn btn-block btn-social btn-facebook">
+    <span class="fa fa-facebook"></span> Sign in with facebook
+  </a>
+  <a class="btn btn-block btn-social btn-google">
+    <span class="fa fa-google"></span> Sign in with google
+  </a>
+
 <button type="button" class="btn btn-default  btn-block">Log in with LINE account</button>
-<button type="button" class="btn btn-default  btn-block">Log in with facebook account</button>
 </div>
 <br><br>
 <form ng-submit="logInSubmit()">
