--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
 <script type='text/javascript' src='testScore.service.js'> </script>
 <script type='text/javascript' src='testSummary.service.js'> </script>
 <script type='text/javascript' src='reviewUnSubscribeTest.service.js'> </script>
+<script type='text/javascript' src='loadingInterceptor.service.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
@@ -31,6 +32,10 @@
 
 
 <body ng-app='app'>
+
+<div data-ng-if="loading">
+    Loading...
+</div>
 
 <div ng-view></div>
 
