--- a/app/index.html
+++ b/app/index.html
@@ -51,12 +51,35 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+#mydiv {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    z-index:1000;
+    background-color:grey;
+    opacity: .8;
+ }
+
+.ajax-loader {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -32px; /* -1 * image width / 2 */
+    margin-top: -32px;  /* -1 * image height / 2 */
+    display: block;
+}
+
 </style>
 
 
 <body ng-app='app'>
 
-<div data-ng-if="loading" class="loader"></div>
+<div id="mydiv" data-ng-if="loading">
+    <img src="ajax-loader.gif" class="ajax-loader"/>
+</div>
 
 <div ng-view></div>
 
