add unSubscribe content exam mode; there are many defects to be fixed e.g. route and logic

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
 <script type='text/javascript' src='testScore.service.js'> </script>
 <script type='text/javascript' src='testSummary.service.js'> </script>
 <script type='text/javascript' src='reviewUnSubscribeTest.service.js'> </script>
+<script type='text/javascript' src='unSubscribeExamMode.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
