implement service to handle dashboard data by $q, promis, resolve; still need to fix the loading spinner

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
 <script type='text/javascript' src='testSummary.service.js'> </script>
 <script type='text/javascript' src='reviewUnSubscribeTest.service.js'> </script>
 <script type='text/javascript' src='dashboard.controller.js'> </script>
+<script type='text/javascript' src='dashboard.service.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
