--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
 <script type='text/javascript' src='reviewUnSubscribeTest.service.js'> </script>
 <script type='text/javascript' src='dashboard.controller.js'> </script>
 <script type='text/javascript' src='dashboard.service.js'> </script>
+<script type='text/javascript' src='logOut.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
