--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
 <script type='text/javascript' src='dashboard.controller.js'> </script>
 <script type='text/javascript' src='dashboard.service.js'> </script>
 <script type='text/javascript' src='logOut.controller.js'> </script>
+<script type='text/javascript' src='loadingInterceptor.service.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
@@ -31,7 +32,33 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css"/>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 <!-- -->
-<link rel = "stylesheet" type = "text/css" href = "mep.css"/>
+<!-- <link rel = "stylesheet" type = "text/css" href = "mep.css"/ -->
+
+<style>
+#loaderdiv {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    z-index:1000;
+    background-color:grey;
+    opacity: .8;
+}
+
+.ajax-loader {
+  position: fixed;
+  z-index: 999;
+  height: 15em;
+  width: 15em;
+  overflow: show;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+</style>
 
 <body ng-app='app'>
 
