create css and image folders

--- a/app/index.html
+++ b/app/index.html
@@ -33,8 +33,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css"/>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 <!-- -->
-<!-- <link rel = "stylesheet" type = "text/css" href = "mep.css"/ -->
+<link rel = "stylesheet" type = "text/css" href = "css/mep.css"/>
 
+<!--
 <style>
 #loaderdiv {
     position:absolute;
@@ -60,11 +61,12 @@
   right: 0;
 }
 </style>
+-->
 
 <body ng-app='app'>
 
 <div id="loaderdiv" data-ng-if="loading">
-    <img src="ajax-loader.gif" class="ajax-loader"/>
+    <img src="image/ajax-loader.gif" class="ajax-loader"/>
 </div>
 
 <div ng-view></div>
