--- a/public/html/index.html
+++ b/public/html/index.html
@@ -23,6 +23,8 @@
 <script type='text/javascript' src='logOut.controller.js'> </script>
 <script type='text/javascript' src='loadingInterceptor.service.js'> </script>
 <script type='text/javascript' src='unSubscribeExamMode.controller.js'> </script>
+<script type='text/javascript' src='answerSummary.controller.js'> </script>
+<script type='text/javascript' src='answerSummary.service.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
