--- a/public/html/answerSummary.html
+++ b/public/html/answerSummary.html
@@ -1,7 +1,16 @@
 <nav-bar></nav-bar>
+<div class='container'>
+  <div class='row'>
 <div class="col-sm-1"></div>
 <div class="col-sm-10">
-<h1> Answer sheet summary</h1>
+  <div class='row'>
+    <div class="col-sm-8">
+      <h1> Answer sheet summary</h1>
+    </div>
+    <div class="col-sm-4">
+      <button type="button" class="btn btn-primary btn-block" ng-click='endExam()'>Finish exam</button>
+    </div>
+  </div>
 <table class="table table-striped">
   <thead>
     <tr>
@@ -16,9 +25,16 @@
           <td>{{ res.questionNumber }}</td>
           <td>{{ res.status }}</td>
           <td>{{ res.userAnswer }}</td>
-          <td><a ng-href="#">Revise answer</a></td>
+          <td><a ng-href="/examReviseAnswerSheet/{{res.userID}}/{{res.testID}}
+                          /{{res.testMode}}/{{res.testStartAt}}/{{res.questionNumber}}">
+                          Revise answer</a></td>
+          <!-- :userID/:testID/:testMode/:testStartAt -->
+          <!-- /reviseExamAnswer/xxx/xxx/xxx -->
+          <!-- use the same exam question route but have user answer in -->
         </tr>
       </tbody>
 </table>
 </div>
 <div class="col-sm-1"></div>
+</div>
+</div>
