get the current user answer from the database; nect is to get the question to midify the answer

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -25,6 +25,8 @@
 <script type='text/javascript' src='unSubscribeExamMode.controller.js'> </script>
 <script type='text/javascript' src='answerSummary.controller.js'> </script>
 <script type='text/javascript' src='answerSummary.service.js'> </script>
+<script type='text/javascript' src='reviseExamAnswerSheet.controller.js'> </script>
+<script type='text/javascript' src='reviseExamAnswerSheet.service.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
