--- a/public/html/answerSummary.html
+++ b/public/html/answerSummary.html
@@ -25,9 +25,7 @@
           <td>{{ res.questionNumber }}</td>
           <td>{{ res.status }}</td>
           <td>{{ res.userAnswer }}</td>
-          <td><a ng-href="/examReviseAnswerSheet/{{res.userID}}/{{res.testID}}
-                          /{{res.testMode}}/{{res.testStartAt}}/{{res.questionNumber}}">
-                          Revise answer</a></td>
+          <td><a ng-href="#!/reviseExamAnswerSheet/{{res.userID}}/{{res.testMode}}/{{res.testStartAt}}/{{res.testID}}/{{res.questionNumber}}">Revise answer</a></td>
           <!-- :userID/:testID/:testMode/:testStartAt -->
           <!-- /reviseExamAnswer/xxx/xxx/xxx -->
           <!-- use the same exam question route but have user answer in -->
