--- a/public/html/reviseExamAnswerSheet.html
+++ b/public/html/reviseExamAnswerSheet.html
@@ -34,7 +34,7 @@
 
     <div class="col-sm-10">
       <h2>
-        Question: {{questionNo}}
+        Question: {{questionNumber}}
       </h2>
 
       <h3>
