--- a/public/html/reviseExamAnswerSheet.html
+++ b/public/html/reviseExamAnswerSheet.html
@@ -41,7 +41,7 @@
         {{question}}
       </h3>
 
-      <form ng-submit="submitAnswerExamMode()">
+      <form ng-submit="submitAnswerExamMode()" ng-init="formData.answer=currentUserAnswer">
         <h4>
           <label><input type="radio" ng-model="formData.answer" value="a"> {{choice1}} </label>
           <br>
