add main controller to clear session storage; start implement create answer sheet for exam mode when start test in exam mode

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -27,6 +27,7 @@
 <script type='text/javascript' src='answerSummary.service.js'> </script>
 <script type='text/javascript' src='reviseExamAnswerSheet.controller.js'> </script>
 <script type='text/javascript' src='reviseExamAnswerSheet.service.js'> </script>
+<script type='text/javascript' src='main.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
