--- a/public/html/index.html
+++ b/public/html/index.html
@@ -28,6 +28,7 @@
 <script type='text/javascript' src='reviseExamAnswerSheet.controller.js'> </script>
 <script type='text/javascript' src='reviseExamAnswerSheet.service.js'> </script>
 <script type='text/javascript' src='main.controller.js'> </script>
+<script type='text/javascript' src='testSummaryExamMode.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
