implement exam score service to display; next is to implement exam summary and review solution

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -29,6 +29,8 @@
 <script type='text/javascript' src='reviseExamAnswerSheet.service.js'> </script>
 <script type='text/javascript' src='main.controller.js'> </script>
 <script type='text/javascript' src='testSummaryExamMode.controller.js'> </script>
+<script type='text/javascript' src='examScore.service.js'> </script>
+<script type='text/javascript' src='examSummary.service.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
