--- a/public/html/index.html
+++ b/public/html/index.html
@@ -31,6 +31,8 @@
 <script type='text/javascript' src='testSummaryExamMode.controller.js'> </script>
 <script type='text/javascript' src='examScore.service.js'> </script>
 <script type='text/javascript' src='examSummary.service.js'> </script>
+<script type='text/javascript' src='reviewTestSolution.controller.js'> </script>
+<script type='text/javascript' src='reviewTestSolution.service.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
