--- a/public/html/testSummaryExamMode.html
+++ b/public/html/testSummaryExamMode.html
@@ -21,7 +21,7 @@
         <tr ng-repeat="res in result">
           <td>{{ res.questionNumber }}</td>
           <td>{{ res.result }}</td>
-          <td><a ng-href="#!">Review solution</a></td>
+          <td><a ng-href="#!/reviewTestSolution/{{res.testID}}/{{res.questionNumber}}">Review solution</a></td>
         </tr>
       </tbody>
 </table>
