--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -5,14 +5,14 @@
 <div class="col-sm-10">
 
 <h3>
-  Hello {{user}}
+  Hello {{userName}}
 </h3>
   <br>
   <h4>
-EMail: {{email}}
+EMail: {{userEmail}}
 </h4>
 <h4>
-ID: {{id}}
+ID: {{userID}}
 </h4>
 </h3>
 
