--- a/public/html/index.html
+++ b/public/html/index.html
@@ -33,6 +33,9 @@
 <script type='text/javascript' src='examSummary.service.js'> </script>
 <script type='text/javascript' src='reviewTestSolution.controller.js'> </script>
 <script type='text/javascript' src='reviewTestSolution.service.js'> </script>
+<script type='text/javascript' src='navBar.su.directive.js'> </script>
+<script type='text/javascript' src='navBar.su.controller.js'> </script>
+<script type='text/javascript' src='dashboard.su.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
