fix authoruzation access between su and pu using $route.current.params instead of sessionStorage for userRole; add error handling page; still need to test more and fix more and think mpre on userRole authorization access; still need to think and design on error handking page

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -36,6 +36,7 @@
 <script type='text/javascript' src='navBar.su.directive.js'> </script>
 <script type='text/javascript' src='navBar.su.controller.js'> </script>
 <script type='text/javascript' src='dashboard.su.controller.js'> </script>
+<script type='text/javascript' src='errorPage.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
