fix the nav bar issue on different user role login; still need to test more and do the automated tests

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -19,7 +19,8 @@
 <script type='text/javascript' src='testSummary.service.js'> </script>
 <script type='text/javascript' src='reviewUnSubscribeTest.service.js'> </script>
 <script type='text/javascript' src='dashboard.controller.js'> </script>
-<script type='text/javascript' src='dashboard.service.js'> </script>
+<script type='text/javascript' src='dashboard.su.service.js'> </script>
+<script type='text/javascript' src='dashboard.pu.service.js'> </script>
 <script type='text/javascript' src='logOut.controller.js'> </script>
 <script type='text/javascript' src='loadingInterceptor.service.js'> </script>
 <script type='text/javascript' src='unSubscribeExamMode.controller.js'> </script>
@@ -37,6 +38,9 @@
 <script type='text/javascript' src='navBar.su.controller.js'> </script>
 <script type='text/javascript' src='dashboard.su.controller.js'> </script>
 <script type='text/javascript' src='errorPage.controller.js'> </script>
+<script type='text/javascript' src='navBar.pu.directive.js'> </script>
+<script type='text/javascript' src='navBar.pu.controller.js'> </script>
+<script type='text/javascript' src='dashboard.pu.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
