refactor not to send hashed password over the network; still need to design the data to show on the dashboard for each user

--- a/public/html/dashboard.pu.html
+++ b/public/html/dashboard.pu.html
@@ -8,13 +8,9 @@
   Hello {{userName}}
 </h3>
   <br>
-  <h4>
-Email: {{userEmail}}
-</h4>
 <h4>
-ID: {{userID}}
+  User role: {{userRole}}
 </h4>
-</h3>
 
 </div>
 
