--- a/public/html/index.html
+++ b/public/html/index.html
@@ -41,6 +41,8 @@
 <script type='text/javascript' src='navBar.pu.directive.js'> </script>
 <script type='text/javascript' src='navBar.pu.controller.js'> </script>
 <script type='text/javascript' src='dashboard.pu.controller.js'> </script>
+<script type='text/javascript' src='signUpInstruction.controller.js'> </script>
+<script type='text/javascript' src='signUpActivate.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
