--- a/public/html/signUpActivate.html
+++ b/public/html/signUpActivate.html
@@ -7,17 +7,18 @@
 
 <form ng-submit="signUpActivate()">
   <div class="form-group">
-    <label for="name">Full name</label>
-    <input type="text" class="form-control" id="name" placeholder="Enter your name" ng-model="formData.name">
+    <label for="userName">Full name</label>
+    <input type="text" required class="form-control" id="userName" placeholder="Enter your name" ng-model="formData.userName">
   </div>
+  <p style="color:red">{{passwordError}}</p>
   <div class="form-group">
     <label for="password">Password</label>
-    <input type="password" class="form-control" id="password"
+    <input type="password" required class="form-control" id="password"
     placeholder="Password" ng-model="formData.password">
   </div>
   <div class="form-group">
     <label for="password">Confirmed password</label>
-    <input type="password" class="form-control" id="password2"
+    <input type="password" required class="form-control" id="password2"
     placeholder="Confirmed password" ng-model="formData.password2">
   </div>
   <button type="submit" class="btn btn-info btn-block">Activate</button>
