fix check null when find in DB to prevent crash; need to check null to prevent crash in every query

--- a/public/html/logIn.html
+++ b/public/html/logIn.html
@@ -25,6 +25,7 @@
 <br><br>
 <form ng-submit="logInSubmit()">
   <div class="form-group">
+    <p style="color:red">{{logInErrorMessage}}</p>
     <label for="email">Email address</label>
     <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="credentials.email">
   </div>
