1st implement su setting; insert DB on account activate

--- a/public/html/navBar.su.html
+++ b/public/html/navBar.su.html
@@ -27,7 +27,7 @@
       <li><a href="#!logIn"><span class="glyphicon glyphicon-log-in"></span> Log in</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right" ng-show='isLogIn()'>
-      <li><a href="#"><span class="glyphicon glyphicon-cog"></span> Setting</a></li>
+      <li><a href="#!/setting/su/{{userID}}"><span class="glyphicon glyphicon-cog"></span> Setting</a></li>
       <li><a href="#!logOut"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
     </ul>
   </div>
