--- a/public/html/index.html
+++ b/public/html/index.html
@@ -43,6 +43,7 @@
 <script type='text/javascript' src='dashboard.pu.controller.js'> </script>
 <script type='text/javascript' src='signUpInstruction.controller.js'> </script>
 <script type='text/javascript' src='signUpActivate.controller.js'> </script>
+<script type='text/javascript' src='suSetting.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
