fix access su setting DB from the setting nav-bar-su; still need to fix the userID and objectID issue

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -44,6 +44,7 @@
 <script type='text/javascript' src='signUpInstruction.controller.js'> </script>
 <script type='text/javascript' src='signUpActivate.controller.js'> </script>
 <script type='text/javascript' src='suSetting.controller.js'> </script>
+<script type='text/javascript' src='suSetting.service.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
