--- a/public/html/suSetting.html
+++ b/public/html/suSetting.html
@@ -5,7 +5,8 @@
 <div class="col-sm-10">
 
 <h1> su setting page </h1>
-<br>
+<p> Data from user setting DB: {{userID}}</p>
+<p>{{userRole}}</p>
 <button type="button" class="btn btn-success" ng-click()='saveSetting()'>Save setting</button>
 
 </div>
