implement 1st time SU setting with study level, test preference, subject preference

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -45,6 +45,7 @@
 <script type='text/javascript' src='signUpActivate.controller.js'> </script>
 <script type='text/javascript' src='suSetting.controller.js'> </script>
 <script type='text/javascript' src='suSetting.service.js'> </script>
+<script type='text/javascript' src='firstSettingSu.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
