still need to fix findAndModify issue, MongoError: bad sort specification

--- a/public/html/firstSettingSu.html
+++ b/public/html/firstSettingSu.html
@@ -26,7 +26,8 @@
 <option ng-repeat="subject in subjectList" value="{{subject}}">{{subject}}</option>
 </select>
 <br> <br>
-<button type="button" class="btn btn-success" ng-click()='saveSetting()'>Save setting</button>
+
+<button type="button" class="btn btn-success" ng-click='saveSetting()'>Save setting</button>
 
 </div>
 
