double decker nav-bar for setting; still need to decide on what type of second deck nav-bar

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -43,9 +43,11 @@
 <script type='text/javascript' src='dashboard.pu.controller.js'> </script>
 <script type='text/javascript' src='signUpInstruction.controller.js'> </script>
 <script type='text/javascript' src='signUpActivate.controller.js'> </script>
-<script type='text/javascript' src='suSetting.controller.js'> </script>
-<script type='text/javascript' src='suSetting.service.js'> </script>
 <script type='text/javascript' src='firstSettingSu.controller.js'> </script>
+<script type='text/javascript' src='profileSettingSu.controller.js'> </script>
+<script type='text/javascript' src='profileSettingSu.service.js'> </script>
+<script type='text/javascript' src='accountSettingSu.controller.js'> </script>
+<script type='text/javascript' src='preferenceSettingSu.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
