add su test list and article list html and controller

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -48,6 +48,8 @@
 <script type='text/javascript' src='profileSettingSu.service.js'> </script>
 <script type='text/javascript' src='accountSettingSu.controller.js'> </script>
 <script type='text/javascript' src='preferenceSettingSu.controller.js'> </script>
+<script type='text/javascript' src='testListSu.controller.js'> </script>
+<script type='text/javascript' src='articleListSu.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
