--- a/public/html/navBar.su.html
+++ b/public/html/navBar.su.html
@@ -18,9 +18,9 @@
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
     <ul class="nav navbar-nav" ng-show='isLogIn()'>
-      <li><a href="#!/dashboard/su/{{userID}}">Dash Board</a></li>
-      <li><a href="#!/examListPage">Exam list</a></li>
-      <li><a href="#!/articlePage">Article</a></li>
+      <li><a href="#!/dashboard/su/{{userID}}">Dashboard</a></li>
+      <li><a href="#!/testList/su/{{userID}}">Test list</a></li>
+      <li><a href="#!/articleList/su/{{userID}}">Article</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right" ng-show='!isLogIn()'>
       <li><a href="#!signUp"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
