--- a/public/html/profileSettingSu.html
+++ b/public/html/profileSettingSu.html
@@ -6,7 +6,7 @@
 <ul class="nav nav-pills">
   <li role="presentation" class="active"><a href="#!/profileSetting/su/{{userID}}">Profile</a></li>
   <li role="presentation"><a href="#!/accountSetting/su/{{userID}}">Account</a></li>
-  <li role="presentation"><a href="#">Preference</a></li>
+  <li role="presentation"><a href="#!/preferenceSetting/su/{{userID}}">Preference</a></li>
 </ul>
 </div>
 <div class="col-sm-1"></div>
