--- a/public/html/logIn.html
+++ b/public/html/logIn.html
@@ -13,7 +13,7 @@
 -->
 <div>
 
-  <a class="btn btn-block btn-social btn-facebook">
+  <a class="btn btn-block btn-social btn-facebook" href='/auth/facebook'>
     <span class="fa fa-facebook"></span> Sign in with facebook
   </a>
   <a class="btn btn-block btn-social btn-google">
