hack way to get the facebook log in works; still need to add the logic of 1stSetting; still need to add loader during routing after facebook authentication

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -50,6 +50,7 @@
 <script type='text/javascript' src='preferenceSettingSu.controller.js'> </script>
 <script type='text/javascript' src='testListSu.controller.js'> </script>
 <script type='text/javascript' src='articleListSu.controller.js'> </script>
+<script type='text/javascript' src='fbLogIn.controller.js'> </script>
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
