--- a/public/html/unSubscribeTestContent.html
+++ b/public/html/unSubscribeTestContent.html
@@ -18,9 +18,9 @@
   <div class="col-sm-6">
     <div class="card">
       <div class="card-block">
-        <h3 class="card-title">Test name</h3>
+        <h3 class="card-title">O-Net Math Pratom 6</h3>
         <p class="card-text">Short description</p>
-        <a href="#" class="btn btn-primary">Go to the test</a>
+        <a href="#!unSubscribeTestMain/ONET-P6-Math-0002" class="btn btn-primary">Go to the test</a>
       </div>
     </div>
   </div>
@@ -32,8 +32,9 @@
   <div class="col-sm-6">
     <div class="card">
       <div class="card-block">
-        <h3 class="card-title">Test name</h3>
-        <a href="#" class="btn btn-primary">Go to the test</a>
+        <h3 class="card-title">O-Net General knowledge Pratom 6</h3>
+        <p class="card-text">Short description</p>
+        <a href="#!unSubscribeTestMain/ONET-P6-GK-0001" class="btn btn-primary">Go to the test</a>
       </div>
     </div>
   </div>
@@ -41,6 +42,7 @@
     <div class="card">
       <div class="card-block">
         <h3 class="card-title">Test name</h3>
+        <p class="card-text">Short description</p>
         <a href="#" class="btn btn-primary">Go to the test</a>
       </div>
     </div>
