--- a/public/html/signUpInstruction.html
+++ b/public/html/signUpInstruction.html
@@ -12,3 +12,5 @@
 <!-- Indicates a successful or positive action -->
 
 <div class="col-sm-2"></div>
+
+<!-- need to add sign up instruction controller if sent email fails -->
