--- a/public/html/main.html
+++ b/public/html/main.html
@@ -1,10 +1,21 @@
 <nav-bar></nav-bar>
 <div class="col-sm-2"></div>
 <div class="col-sm-8">
+  <!--
   <h1>Welcome to Modern Education Platform</h1>
+  -->
+  <h1>ยินดีต้อนรับ เข้าสู่ Modern Education Platform</h1>
+
+  <!--
   <h2>
   We offer high quality tests for students to prepare for Exams such as O-Net.
   </h2>
+  -->
+
+  <h3>
+  Modern Education Platform ช่วยให้การเรียน และ การเตรียมตัวสอบ เป็นเรื่องง่ายขึ้น
+  </h3>
+
   <a href="#!unSubscribeTestContent" button type="button" class="btn btn-primary">Enter the exam list</a>
 </div>
 <!-- Indicates a successful or positive action -->
