--- a/public/html/main.html
+++ b/public/html/main.html
@@ -13,7 +13,7 @@
   -->
 
   <h3>
-  Modern Education Platform ช่วยให้การเรียน และ การเตรียมตัวสอบ เป็นเรื่องง่ายขึ้น
+  เราช่วยให้การเรียน และ การเตรียมตัวสอบ เป็นเรื่องง่ายขึ้น
   </h3>
 
   <a href="#!unSubscribeTestContent" button type="button" class="btn btn-primary">Enter the exam list</a>
