fix the user setting display; next is to do the modal dialog for real setting

--- a/public/html/accountSettingSu.html
+++ b/public/html/accountSettingSu.html
@@ -12,13 +12,15 @@
 <div class="col-sm-1"></div>
 </div>
 
-
-<br> <br>
-
 <div class='row'>
   <div class="col-sm-1"></div>
   <div class="col-sm-10">
-
+    <h1> Account setting </h1>
+    <p>
+      <h3>
+        Log in method: {{logInmethod}}
+      </h3>
+    </p>
     <button type="button" class="btn btn-success" ng-click='saveSetting()'>Save setting</button>
 
   </div>
