--- a/public/html/index.html
+++ b/public/html/index.html
@@ -47,10 +47,12 @@
 <script type='text/javascript' src='profileSettingSu.controller.js'> </script>
 <script type='text/javascript' src='profileSettingSu.service.js'> </script>
 <script type='text/javascript' src='accountSettingSu.controller.js'> </script>
-<script type='text/javascript' src='preferenceSettingSu.controller.js'> </script>
 <script type='text/javascript' src='testListSu.controller.js'> </script>
 <script type='text/javascript' src='articleListSu.controller.js'> </script>
 <script type='text/javascript' src='fbLogIn.controller.js'> </script>
+<script type='text/javascript' src='preferenceSettingSu.controller.js'> </script>
+<script type='text/javascript' src='preferenceSettingSu.service.js'> </script>
+
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
