--- a/public/html/preferenceSettingSu.html
+++ b/public/html/preferenceSettingSu.html
@@ -12,14 +12,19 @@
 <div class="col-sm-1"></div>
 </div>
 
-
-<br> <br>
-
 <div class='row'>
   <div class="col-sm-1"></div>
   <div class="col-sm-10">
+    <h1> Preference setting </h1>
+    <p>
+      <h3>
+        <p>Level: {{userLevel}}</p>
+        <p>Test preference: {{userPreferTest}}</p>
+        <p>Subject preference: {{userPreferSubject}}</p>
+      </h3>
+    </p>
 
-    <button type="button" class="btn btn-success" ng-click='saveSetting()'>Save setting</button>
+    <button type="button" class="btn btn-success" ng-click='edit()'>Edit</button>
 
   </div>
 
