--- a/public/html/profileSettingSu.html
+++ b/public/html/profileSettingSu.html
@@ -12,14 +12,17 @@
 <div class="col-sm-1"></div>
 </div>
 
-
 <div class='row'>
   <div class="col-sm-1"></div>
   <div class="col-sm-10">
 
     <h1> Profile setting </h1>
-    <p> Data from user setting DB: {{userID}} </p>
-    <p> {{userRole}} </p>
+    <p>
+      <h3>Name: {{userName}}</h3>
+    </p>
+    <p>
+      <h3>User ID: {{userID}}</h3>
+    </p>
 
     <button type="button" class="btn btn-success" ng-click='saveSetting()'>Save setting</button>
 
