add ui-bootstrap component

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap.js"></script>
 
 <script type='text/javascript' src='app.module.js'></script>
 <script type='text/javascript' src='route.js'> </script>
