--- a/public/html/preferenceSettingSu.html
+++ b/public/html/preferenceSettingSu.html
@@ -24,7 +24,7 @@
       </h3>
     </p>
 
-    <button type="button" class="btn btn-success" ng-click='edit()'>Edit</button>
+    <button type="button" class="btn btn-success" ng-click='open()'>Edit</button>
 
   </div>
 
