--- a/public/html/preferenceSettingSuModal.html
+++ b/public/html/preferenceSettingSuModal.html
@@ -5,7 +5,7 @@
         </div>
         <div class="modal-body" id="modal-body">
 
-
+          {{data}}
 
         </div>
         <div class="modal-footer">
