re-factor file name and take the log out; still need to re-factor more for testing

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -56,7 +56,7 @@
 <script type='text/javascript' src='fbLogIn.controller.js'> </script>
 <script type='text/javascript' src='preferenceSettingSu.controller.js'> </script>
 <script type='text/javascript' src='preferenceSettingSu.service.js'> </script>
-<script type='text/javascript' src='modalInstance.controller.js'> </script>
+<script type='text/javascript' src='preferenceSettingSuModal.controller.js'> </script>
 
 
 <!-- bootstrap3 -->
