1st test writer page log in and dashboard

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -45,6 +45,10 @@
 <script type='text/javascript' src='navBar.pu.directive.js'> </script>
 <script type='text/javascript' src='navBar.pu.controller.js'> </script>
 <script type='text/javascript' src='dashboard.pu.controller.js'> </script>
+<script type='text/javascript' src='navBar.tw.directive.js'> </script>
+<script type='text/javascript' src='navBar.tw.controller.js'> </script>
+<script type='text/javascript' src='dashboard.tw.controller.js'> </script>
+<script type='text/javascript' src='dashboard.tw.service.js'> </script>
 <script type='text/javascript' src='signUpInstruction.controller.js'> </script>
 <script type='text/javascript' src='signUpActivate.controller.js'> </script>
 <script type='text/javascript' src='firstSettingSu.controller.js'> </script>
