1st implement on super user log in and dashboard

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -49,6 +49,10 @@
 <script type='text/javascript' src='navBar.tw.controller.js'> </script>
 <script type='text/javascript' src='dashboard.tw.controller.js'> </script>
 <script type='text/javascript' src='dashboard.tw.service.js'> </script>
+<script type='text/javascript' src='navBar.ad.directive.js'> </script>
+<script type='text/javascript' src='navBar.ad.controller.js'> </script>
+<script type='text/javascript' src='dashboard.ad.controller.js'> </script>
+<script type='text/javascript' src='dashboard.ad.service.js'> </script>
 <script type='text/javascript' src='signUpInstruction.controller.js'> </script>
 <script type='text/javascript' src='signUpActivate.controller.js'> </script>
 <script type='text/javascript' src='firstSettingSu.controller.js'> </script>
