test new loader; still need to modify to have a more pretty loader

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -81,7 +81,7 @@
 <body ng-app='app'>
 
 <div id="loaderdiv" data-ng-if="loading">
-    <img src="image/ajax-loader.gif" class="ajax-loader"/>
+    <img src="image/loading.gif" class="ajax-loader"/>
 </div>
 
 <div ng-view></div>
