1st implement 4 panels dashboard

--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -1,17 +1,37 @@
 <nav-bar-su></nav-bar-su>
 
-<div class="col-sm-1"></div>
-
-<div class="col-sm-10">
-
-<h3>
-  Hello {{userName}}
-</h3>
-  <br>
-  <h4>
-  User role: {{userRole}}
-</h4>
-
+<div class="row">
+  <div class="col-sm-1"></div>
+  <div class="col-sm-10">
+    <h3>
+      Hello {{userName}}
+    </h3>
+  </div>
+  <div class="col-sm-1"></div>
 </div>
 
-<div class="col-sm-1"></div>
+<div class="row">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-10">
+      <div class="col-sm-6">
+        <h1>One</h1>
+        <div class="divider"></div>
+        <div class="section">
+          <h5>Section 1</h5>
+          <p>Stuff</p>
+        </div>
+    </div>
+    <div class="divider"></div>
+      <div class="col-sm-6 text-center"><h1>Two</h1></div>
+    </div>
+    <div class="col-sm-1"></div>
+</div>
+
+<div class="row">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-10">
+      <div class="col-sm-6 text-center"><h1>Three</h1></div>
+      <div class="col-sm-6 text-center"><h1>Four</h1></div>
+    </div>
+    <div class="col-sm-1"></div>
+</div>
