implement left and right half; still need to pad the left and right

--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -10,28 +10,17 @@
   <div class="col-sm-1"></div>
 </div>
 
-<div class="row">
-    <div class="col-sm-1"></div>
-    <div class="col-sm-10">
-      <div class="col-sm-6">
-        <h1>One</h1>
-        <div class="divider"></div>
-        <div class="section">
-          <h5>Section 1</h5>
-          <p>Stuff</p>
-        </div>
-    </div>
-    <div class="divider"></div>
-      <div class="col-sm-6 text-center"><h1>Two</h1></div>
-    </div>
-    <div class="col-sm-1"></div>
-</div>
-
-<div class="row">
-    <div class="col-sm-1"></div>
-    <div class="col-sm-10">
-      <div class="col-sm-6 text-center"><h1>Three</h1></div>
-      <div class="col-sm-6 text-center"><h1>Four</h1></div>
-    </div>
-    <div class="col-sm-1"></div>
+<div class="container">
+  <div class="left-half">
+    <article>
+      <h1>Left Half</h1>
+      <p>Weekends don't count unless you spend them doing something completely pointless.</p>
+    </article>
+  </div>
+  <div class="right-half">
+    <article>
+      <h1>Right Half</h1>
+      <p>If your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
+    </article>
+  </div>
 </div>
