--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -10,7 +10,7 @@
   <div class="col-sm-1"></div>
 </div>
 
-<div class="container">
+<div class="container fluid">
   <div class="left-half">
     <article>
       <h1>Left Half</h1>
@@ -18,6 +18,18 @@
     </article>
   </div>
   <div class="right-half">
+    <article>
+      <h1>Right Half</h1>
+      <p>If your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
+    </article>
+  </div>
+  <div class="bottom-left">
+    <article>
+      <h1>Left Half</h1>
+      <p>Weekends don't count unless you spend them doing something completely pointless.</p>
+    </article>
+  </div>
+  <div class="bottom-right">
     <article>
       <h1>Right Half</h1>
       <p>If your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
