--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -4,35 +4,17 @@
   <div class="col-sm-1"></div>
   <div class="col-sm-10">
     <h4>
-      สวัสดี {{userName}} เรามาดู dashboard กัน
+      สวัสดี {{userName}} เรามาดู Dashboard กัน
     </h4>
   </div>
   <div class="col-sm-1"></div>
 </div>
 
 <div class="container fluid">
-  <div class="left-half">
-    <article>
-      <h1>Left Half</h1>
-      <p>Weekends don't count unless you spend them doing something completely pointless.</p>
-    </article>
-  </div>
-  <div class="right-half">
-    <article>
-      <h1>Right Half</h1>
-      <p>If your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
-    </article>
-  </div>
-  <div class="bottom-left">
-    <article>
-      <h1>Left Half</h1>
-      <p>Weekends don't count unless you spend them doing something completely pointless.</p>
-    </article>
-  </div>
-  <div class="bottom-right">
-    <article>
-      <h1>Right Half</h1>
-      <p>If your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
-    </article>
+  <div class="wrapper">
+     <div class="dashboard1">1</div>
+     <div class="dashboard2">2</div>
+     <div class="dashboard3">3</div>
+     <div class="dashboard4">4</div>
   </div>
 </div>
