fix nav bar for su; need padding on top; css is important

--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -1,5 +1,6 @@
 <nav-bar-su></nav-bar-su>
 
+<div style="margin-top:70px">
 <div class="row">
   <div class="col-sm-1"></div>
   <div class="col-sm-10">
@@ -10,11 +11,12 @@
   <div class="col-sm-1"></div>
 </div>
 
-<div class="container fluid">
+<div class="container fluid" style="margin-top:20px">
   <div class="wrapper">
-     <div class="dashboard1">1</div>
-     <div class="dashboard2">2</div>
-     <div class="dashboard3">3</div>
-     <div class="dashboard4">4</div>
+     <div class="dashboard1">New for you</div>
+     <div class="dashboard2">Message</div>
+     <div class="dashboard3">Test history</div>
+     <div class="dashboard4">Others</div>
   </div>
+</div>
 </div>
