--- a/public/html/navBar.su.html
+++ b/public/html/navBar.su.html
@@ -1,5 +1,5 @@
 <div ng-controller='navBarSuController'>
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
 
