--- a/public/html/accountSettingSu.html
+++ b/public/html/accountSettingSu.html
@@ -1,5 +1,6 @@
 <nav-bar-su></nav-bar-su>
 
+<div style="margin-top:70px">
 <div class='row'>
 <div class="col-sm-1"></div>
 <div class="col-sm-10">
@@ -26,4 +27,5 @@
   </div>
 
   <div class="col-sm-1"></div>
+</div>
 </div>
