--- a/public/html/profileSettingSu.html
+++ b/public/html/profileSettingSu.html
@@ -1,5 +1,7 @@
 <nav-bar-su></nav-bar-su>
 
+
+<div style="margin-top:70px">
 <div class='row'>
 <div class="col-sm-1"></div>
 <div class="col-sm-10">
@@ -29,4 +31,5 @@
   </div>
 
   <div class="col-sm-1"></div>
+</div>
 </div>
