--- a/public/html/navBar.su.html
+++ b/public/html/navBar.su.html
@@ -11,7 +11,8 @@
               <span class="icon-bar"></span>
       </button>
 
-      <a class="navbar-brand" href="#!/dashboard/su/{{userID}}">Modern Education Platform</a>
+      <a class="navbar-brand" href="#!/dashboard/su/{{userID}}" style="color:black; font-weight: bold;
+      font-family: Times New Roman">Modern Education Platform</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
