--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -4,14 +4,16 @@
 <div class="row">
   <div class="col-sm-1"></div>
   <div class="col-sm-10">
-    <h4>
-      สวัสดี {{userName}} เรามาดู Dashboard กัน
-    </h4>
+    <div class="su_dashboard_greeting">
+      <h4>
+        สวัสดี {{userName}} เรามาดู Dashboard กัน
+      </h4>
+  </div>
   </div>
   <div class="col-sm-1"></div>
 </div>
 
-<div class="container fluid" style="margin-top:20px">
+<div class="container fluid" style="margin-top:30px">
   <div class="wrapper">
      <div class="dashboard1">New for you</div>
      <div class="dashboard2">Message</div>
