--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -1,19 +1,10 @@
 <nav-bar-su></nav-bar-su>
 
-<div style="margin-top:70px">
-<div class="row">
-  <div class="col-sm-1"></div>
-  <div class="col-sm-10">
-    <div class="su_dashboard_greeting">
-      <h4>
-        สวัสดี {{userName}} เรามาดู Dashboard กัน
-      </h4>
-  </div>
-  </div>
-  <div class="col-sm-1"></div>
+<div class="navbar navbar-default navbar-fixed-top second-navbar">
+    <p class="navbar-text">สวัสดี {{userName}} เรามาดู Dashboard กัน</p>
 </div>
 
-<div class="container fluid" style="margin-top:30px">
+<div class="container fluid" style="margin-top:120px">
   <div class="wrapper">
      <div class="dashboard1">New for you</div>
      <div class="dashboard2">Message</div>
