fix top nav bar; add more button on navbar for about us contact us share us

--- a/public/html/main.html
+++ b/public/html/main.html
@@ -1,23 +1,23 @@
 <nav-bar></nav-bar>
-<div class="col-sm-2"></div>
-<div class="col-sm-8">
-  <!--
-  <h1>Welcome to Modern Education Platform</h1>
-  -->
-  <h1>ยินดีต้อนรับ เข้าสู่ Modern Education Platform</h1>
+  <div class="row" style="margin-top:120px">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-8">
 
-  <!--
-  <h2>
-  We offer high quality tests for students to prepare for Exams such as O-Net.
-  </h2>
-  -->
+      <h1>ยินดีต้อนรับ เข้าสู่ Modern Education Platform</h1>
 
-  <h3>
-  เราช่วยให้การเรียน และ การเตรียมตัวสอบ เป็นเรื่องง่ายขึ้น
-  </h3>
+      <h3>
+        เราช่วยให้การเรียน และ การเตรียมตัวสอบ เป็นเรื่องง่ายขึ้น
+      </h3>
+      <div class="col-sm-2"></div>
+    </div>
+  </div>
 
-  <a href="#!unSubscribeTestContent" button type="button" class="btn btn-primary">Enter the exam list</a>
-</div>
-<!-- Indicates a successful or positive action -->
+  <br> <br>
 
-<div class="col-sm-2"></div>
+  <div class="row">
+    <div class="col-sm-4"></div>
+    <div class="col-sm-4">
+      <a href="#!unSubscribeTestContent" button type="button" class="btn btn-primary btn-block">Try the exam list</a>
+    </div>
+    <div class="col-sm-4"></div>
+  </div>
