--- a/public/html/navBar.html
+++ b/public/html/navBar.html
@@ -1,5 +1,5 @@
 <div ng-controller='navBarController'>
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
 
@@ -24,6 +24,15 @@
     <ul class="nav navbar-nav navbar-right" ng-show='!isLogIn()'>
       <li><a href="#!signUp"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
       <li><a href="#!logIn"><span class="glyphicon glyphicon-log-in"></span> Log in</a></li>
+
+      <li class="dropdown">
+                <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="">About us</a></li>
+                  <li><a href="">Contact us</a></li>
+                  <li><a href="">Share us</a></li>
+                </ul>
+              </li>
     </ul>
     <ul class="nav navbar-nav navbar-right" ng-show='isLogIn()'>
       <li><a href="#"><span class="glyphicon glyphicon-cog"></span> Setting</a></li>
