--- a/public/html/unSubscribeTestContent.html
+++ b/public/html/unSubscribeTestContent.html
@@ -1,5 +1,7 @@
 <nav-bar></nav-bar>
 
+<div class="row" style="margin-top:80px">
+
 <div class="col-sm-2"></div>
 
 <div class="col-sm-8">
@@ -53,3 +55,5 @@
 </div>
 
 <div class="col-sm-2"></div>
+
+</div>
