--- a/public/html/logIn.html
+++ b/public/html/logIn.html
@@ -1,5 +1,7 @@
 <nav-bar></nav-bar>
 
+<div class="row" style="margin-top:100px">
+
 <div class="col-sm-4"></div>
 
 <div class="col-sm-4">
@@ -47,6 +49,8 @@
 
 
 <div class="col-sm-4"></div>
+
+</div>
 <!--
 <script type='text/javascript' src='logIn.controller.js'></script>
 -->
