--- a/public/html/logOut.html
+++ b/public/html/logOut.html
@@ -1,5 +1,7 @@
 <nav-bar></nav-bar>
 
+<div class="row" style="margin-top:120px">
+
 <div class="col-sm-1"></div>
 
 <div class="col-sm-10">
@@ -8,6 +10,12 @@
   {{message}}
 </h1>
 
+<h2>
+  Help share us with your friends
+</h2>
+
 </div
 
 <div class="col-sm-1"></div>
+
+</div>
