change wording on main-home page; still need to put carousel image play

--- a/public/html/main.html
+++ b/public/html/main.html
@@ -3,7 +3,7 @@
     <div class="col-sm-2"></div>
     <div class="col-sm-8">
 
-      <h1>ยินดีต้อนรับ เข้าสู่ Modern Education Platform</h1>
+      <h1>Modern Education Platform</h1>
 
       <h3>
         เราช่วยให้การเรียน และ การเตรียมตัวสอบ เป็นเรื่องง่ายขึ้น
