--- a/public/html/navBar.html
+++ b/public/html/navBar.html
@@ -27,7 +27,7 @@
 
       <li class="dropdown">
                 <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More<span class="caret"></span></a>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu" id="main-more-dropdown">
                   <li><a href="">About us</a></li>
                   <li><a href="">Contact us</a></li>
                   <li><a href="">Share us</a></li>
