--- a/public/html/navBar.ad.html
+++ b/public/html/navBar.ad.html
@@ -18,7 +18,7 @@
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
     <ul class="nav navbar-nav" ng-show='isLogIn()'>
-      <li><a href="#!/dashboard/su/{{userID}}">Dashboard</a></li>
+      <li><a href="#!/dashboard/ad/{{userID}}">Dashboard</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right" ng-show='!isLogIn()'>
       <li><a href="#!signUp"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
