--- a/public/html/dashboard.ad.html
+++ b/public/html/dashboard.ad.html
@@ -11,6 +11,7 @@
           <th>user name</th>
           <th>user ID</th>
           <th>user Role</th>
+          <th>view</th>
         </tr>
       </thead>
       <tbody>
@@ -18,6 +19,7 @@
           <td>{{ user.userName }}</td>
           <td>{{ user.userID }}</td>
           <td>{{ user.userRole }}</td>
+          <td><a href="#!/userDetail/{{user.userRole}}/{{user.userID}}">view</a>
         </tr>
       </tbody>
     </table>
