--- a/public/html/dashboard.ad.html
+++ b/public/html/dashboard.ad.html
@@ -5,7 +5,7 @@
 
   <div class="col-sm-10">
 
-    <table class="table">
+    <table class="table table-striped table-hover">
       <thead>
         <tr>
           <th>user name</th>
