--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -6,10 +6,18 @@
 
 <div class="container fluid" style="margin-top:120px">
   <div class="wrapper">
-     <div class="dashboard1">New for you</div>
-     <div class="dashboard2">Message</div>
-     <div class="dashboard3">Test history</div>
-     <div class="dashboard4">Others</div>
+     <div class="dashboard1">
+       <h4>New test</h4>
+     </div>
+     <div class="dashboard2">
+       <h4>New article</h4>
+      </div>
+     <div class="dashboard3">
+       <h4>Test history</h4>
+     </div>
+     <div class="dashboard4">
+       <h4>Others</h4>
+     </div>
   </div>
 </div>
 </div>
