--- a/public/html/unSubscribeTestContent.html
+++ b/public/html/unSubscribeTestContent.html
@@ -43,9 +43,9 @@
   <div class="col-sm-6">
     <div class="card">
       <div class="card-block">
-        <h3 class="card-title">Test name</h3>
+        <h3 class="card-title">O-Net General knowledge Pratom 6</h3>
         <p class="card-text">Short description</p>
-        <a href="#" class="btn btn-primary">Go to the test</a>
+        <a href="#!unSubscribeTestMain/ONET-P6-GK-0002" class="btn btn-primary">Go to the test</a>
       </div>
     </div>
   </div>
