--- a/public/html/answerSummary.html
+++ b/public/html/answerSummary.html
@@ -1,6 +1,9 @@
 <nav-bar></nav-bar>
+
+<div class="row" style="margin-top:80px">
+
 <div class='container'>
-  <div class='row'>
+
 <div class="col-sm-1"></div>
 <div class="col-sm-10">
   <div class='row'>
