--- a/public/html/unSubscribeExamMode.html
+++ b/public/html/unSubscribeExamMode.html
@@ -1,6 +1,8 @@
 <nav-bar></nav-bar>
 
 <!-- answer sheet summary and stop the test button -->
+
+<div class="row" style="margin-top:80px">
 <div class='container'>
   <div class='row'>
     <div class="col-sm-1">
@@ -67,4 +69,6 @@
     <div class="col-sm-1">
     </div>
   </div>
+</div>
+
 </div>
