--- a/public/html/unSubscribeTutorialMode.html
+++ b/public/html/unSubscribeTutorialMode.html
@@ -1,6 +1,6 @@
 <nav-bar> </nav-bar>
 
-<div class='row'>
+<div class="row" style="margin-top:80px">
 
   <div class="col-sm-1"></div>
 
@@ -49,4 +49,6 @@
     <h2> {{explanation}} </h2>
     </div>
 <div class="col-sm-1"></div>
+</div>
+
 </div>
