get the log in status; still need to implement the asynchronous to route to the log in and dasgboard page

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -78,6 +78,8 @@
 <!-- -->
 <link rel = "stylesheet" type = "text/css" href = "css/mep.css"/>
 
+<script type="text/javascript" src="//connect.facebook.net/en_US/sdk.js"></script>
+
 <body ng-app='app'>
 
 <div id="loaderdiv" data-ng-if="loading">
