--- a/public/html/navBar.html
+++ b/public/html/navBar.html
@@ -23,7 +23,7 @@
     </ul>
     <ul class="nav navbar-nav navbar-right" ng-show='!isLogIn()'>
       <li><a href="#!signUp"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="#!logIn"><span class="glyphicon glyphicon-log-in"></span> Log in</a></li>
+      <li><a href="" ng-click="checkFBLogIn()"><span class="glyphicon glyphicon-log-in"></span> Log in</a></li>
 
       <li class="dropdown">
                 <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More<span class="caret"></span></a>
@@ -40,5 +40,7 @@
     </ul>
   </div>
 </div>
+
 </nav>
+
 </div>
