--- a/public/html/dashboard.su.html
+++ b/public/html/dashboard.su.html
@@ -7,11 +7,39 @@
 <div class="container fluid" style="margin-top:120px">
   <div class="wrapper">
      <div class="dashboard1">
-       <h4>New test</h4>
+       <h3>New test</h3>
+       <div class="card">
+         <div class="card-block">
+           <h3 class="card-title">O-Net Math Pratom 6</h3>
+           <p class="card-text">Short description</p>
+           <a href="#!unSubscribeTestMain/ONET-P6-Math-0001" class="btn btn-primary">Go to the test</a>
+         </div>
+       </div>
+       <div class="card">
+         <div class="card-block">
+           <h3 class="card-title">O-Net Math Pratom 6</h3>
+           <p class="card-text">Short description</p>
+           <a href="#!unSubscribeTestMain/ONET-P6-Math-0001" class="btn btn-primary">Go to the test</a>
+         </div>
+       </div>
      </div>
      <div class="dashboard2">
-       <h4>New article</h4>
-      </div>
+       <h3>New article</h3>
+       <div class="card">
+         <div class="card-block">
+           <h3 class="card-title">O-Net Math Pratom 6</h3>
+           <p class="card-text">Short description</p>
+           <a href="#!unSubscribeTestMain/ONET-P6-Math-0001" class="btn btn-primary">Go to the test</a>
+         </div>
+       </div>
+       <div class="card">
+         <div class="card-block">
+           <h3 class="card-title">O-Net Math Pratom 6</h3>
+           <p class="card-text">Short description</p>
+           <a href="#!unSubscribeTestMain/ONET-P6-Math-0001" class="btn btn-primary">Go to the test</a>
+         </div>
+       </div>
+     </div>
      <div class="dashboard3">
        <h4>Test history</h4>
      </div>
