1st attempt carousel

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -65,6 +65,7 @@
 <script type='text/javascript' src='preferenceSettingSu.controller.js'> </script>
 <script type='text/javascript' src='preferenceSettingSu.service.js'> </script>
 <script type='text/javascript' src='preferenceSettingSuModal.controller.js'> </script>
+<script type='text/javascript' src='mainCarousel.controller.js'> </script>
 
 
 <!-- bootstrap3 -->
