concat works; but minify does not work due to Uncaught Error: [$injector:modulerr]; need to fix this

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -7,6 +7,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.js"></script>
 
 
+<script src='all.min.js'></script>
+
+<!--
 <script type='text/javascript' src='app.module.js'></script>
 <script type='text/javascript' src='route.js'> </script>
 <script type='text/javascript' src='navBar.directive.js'> </script>
@@ -66,7 +69,7 @@
 <script type='text/javascript' src='preferenceSettingSu.service.js'> </script>
 <script type='text/javascript' src='preferenceSettingSuModal.controller.js'> </script>
 <script type='text/javascript' src='mainCarousel.controller.js'> </script>
-
+-->
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
